[package]
authors = ["René Herrero Gómez <rene@sevenseas.io>"]
categories = ["no-std"]
description = " NMEA 2000 no_std library implemented as an embedded-hal CAN driver "
documentation = "https://docs.rs/n2k"
edition = "2018"
keywords = ["nmea2000", "embedded", "can"]
license = "MIT OR Apache-2.0"
name = "n2k"
readme = "README.md"
repository = "https://github.com/sevenseas-io/n2k"
version = "0.1.1-alpha.1"
exclude = ["docs"]

[dependencies]
embedded-hal-can = "0.1.0"
nb = { version = "1.0.0" }
heapless = "0.7.0"
